Update with latest OpenJDK changes